--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.2",
-    "next": "^16.0.7",
+    "next": "16.0.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
